feat: enable user blocking and event filtering based on user blocks