@@ -13,13 +13,12 @@ import com.iss.eventorium.shared.models.PagedResponse;
 import com.iss.eventorium.user.services.AuthService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -34,9 +33,11 @@ public class EventService {
     }
 
     public List<EventSummaryResponseDto> getTopEvents() {
-        Pageable pageable = PageRequest.of(0, 5);
-        List<Event> events = repository.findTopFiveUpcomingEvents(getUserCity(), pageable);
-        return events.stream().map(EventMapper::toSummaryResponse).collect(Collectors.toList());
+        Specification<Event> specification = EventSpecification.filterTopEvents(getUserCity());
+        List<Event> events = repository.findAll(specification).stream()
+                                        .sorted(Comparator.comparing(Event::getDate))
+                                        .limit(5).toList();
+        return events.stream().map(EventMapper::toSummaryResponse).toList();
     }
 
     private String getUserCity() {  // If the user is logged in, it returns the city from the profile, otherwise defaults to "Novi Sad".
@@ -46,27 +47,27 @@ public class EventService {
     }
 
     public List<EventSummaryResponseDto> getAll() {
-        Specification<Event> specification = EventSpecification.filterByPrivacy(Privacy.OPEN);
+        Specification<Event> specification = EventSpecification.filterByPrivacy(Privacy.OPEN, authService.getCurrentUser());
         return repository.findAll(specification).stream().map(EventMapper::toSummaryResponse).toList();
     }
 
     public PagedResponse<EventSummaryResponseDto> searchEvents(String keyword, Pageable pageable) {
-        Specification<Event> specification = EventSpecification.filterByName(keyword);
+        Specification<Event> specification = EventSpecification.filterByName(keyword, authService.getCurrentUser());
         return EventMapper.toPagedResponse(repository.findAll(specification, pageable));
     }
 
     public List<EventSummaryResponseDto> searchEvents(String keyword) {
-        Specification<Event> specification = EventSpecification.filterByName(keyword);
+        Specification<Event> specification = EventSpecification.filterByName(keyword, authService.getCurrentUser());
         return repository.findAll(specification).stream().map(EventMapper::toSummaryResponse).toList();
     }
 
     public PagedResponse<EventSummaryResponseDto> getEventsPaged(Pageable pageable) {
-        Specification<Event> specification = EventSpecification.filterByPrivacy(Privacy.OPEN);
+        Specification<Event> specification = EventSpecification.filterByPrivacy(Privacy.OPEN, authService.getCurrentUser());
         return EventMapper.toPagedResponse(repository.findAll(specification, pageable));
     }
 
     public PagedResponse<EventSummaryResponseDto> filterEvents(EventFilterDto filter, Pageable pageable) {
-        Specification<Event> specification = EventSpecification.filterBy(filter);
+        Specification<Event> specification = EventSpecification.filterBy(filter, authService.getCurrentUser());
         return EventMapper.toPagedResponse(repository.findAll(specification, pageable));
     }
 
